--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,31 +3,131 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --bg-color: #080d12;
+  --primary-color: #e9e9e9;
+  --secondary-color: #3872ab;
+  --scrollbar-color: #05090c;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+::-webkit-scrollbar {
+  border-radius: 10px;
+  width: 10px;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: #05090c;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #05090c;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #e9e9e9;
+  background-clip: content-box;
+  border: 2px solid #0000;
+  border-radius: 10px;
+}
+
+* {
+  scroll-behavior: smooth;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: #e9e9e9;
+  background-color: #080d12;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+.gradient {
+  background: linear-gradient(180deg, #e9e9e9, #3872ab);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.circle {
+  background-color: linear-gradient(180deg, #e9e9e9, #3872ab);
+  box-shadow: inset 0 0 30px 0 #fff, inset 20px 0 30px #3872ab, inset -20px 0 30px #3872ab, inset 20px 0 300px #3872ab, inset -20px 0 300px #3872ab, 0 0 50px #fff, -10px 0 100px #3872ab, 10px 0 80px #fff;
+  border-radius: 9999px;
+}
+
+.swiper-button-prev {
+  width: 48px !important;
+  height: 48px !important;
+  background-color: #080d12;
+  border-radius: 50%;
+  color: #3872ab !important;
+  filter: brightness(1.5);
+  transition: all 0.150s ease-in-out;
+}
+
+.swiper-button-prev:after {
+  font-size: 16px !important;
+}
+
+.swiper-button-prev:hover {
+  filter: brightness(2);
+}
+
+.swiper-button-next {
+  width: 48px !important;
+  height: 48px !important;
+  background-color: #080d12;
+  /* Cambia el color de fondo del botón prev */
+  border-radius: 50%;
+  color: #3872ab !important;
+  filter: brightness(1.5);
+  transition: all 0.150s ease-in-out;
+  /* Aplica un borde redondeado al botón prev */
+}
+
+.swiper-button-next:after {
+  font-size: 16px !important;
+}
+
+.swiper-button-next:hover {
+  filter: brightness(2);
+}
+
+.animate-blur-pulse {
+  animation: blur-pulse 1.5s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+.custom-swipper .swipper {
+  overflow: visible !important;
+  touch-action: pan-y;
+}
+
+.display {
+  animation: display 0.150s ease-in-out;
+}
+
+@media (min-width: 768px) {
+  div h3 .gradient {
+    background: linear-gradient(none);
+    background-clip: none;
+    -webkit-text-fill-color: none;
+  }
+}
+
+@keyframes display {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes blur-pulse {
+
+  0%,
+  100% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: .5;
+    filter: blur(4px);
   }
 }
